--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,13 +11,7 @@
   {{ end }}
     <title>diesmo5</title>
 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/sudocore/sudocore.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
@@ -26,8 +20,7 @@
     />
   </head>
   <body class="text-century">
-    <div class="container">
-      {{ partial "navbar" . }}
+    <div class="">
       {{ block "main" . }}
       {{ end }}
     </div>
