--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,237 @@
 {{ define "main" }}
+{{ partial "navbar" . }}
 <!--  -->
-<div class="row pb-3">
+<div class="container">
+  <div class="row pb-3">
+    <div
+      id="carouselExampleIndicators"
+      class="carousel slide"
+      data-ride="carousel"
+    >
+      <ol class="carousel-indicators">
+        <li
+          data-target="#carouselExampleIndicators"
+          data-slide-to="0"
+          class="active"
+        ></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <a href="" class="text-decoration-none">
+            <img
+              src="/img/c-how-to-program-course-promo.png"
+              class="d-block w-100"
+              alt="C How To Program Course Promo"
+            />
+          </a>
+        </div>
+        <div class="carousel-item">
+          <a href="" class="text-decoration-none">
+            <img
+              src="/img/youtube-promo.png"
+              class="d-block w-100"
+              alt="SudoCore Web Framework Promo"
+            />
+          </a>
+        </div>
+        <div class="carousel-item">
+          <a href="" class="text-decoration-none">
+            <img
+              src="/img/sudocore-promo.png"
+              class="d-block w-100"
+              alt="SudoCore Web Framework Promo"
+            />
+          </a>
+        </div>
+      </div>
+      <a
+        class="carousel-control-prev"
+        href="#carouselExampleIndicators"
+        role="button"
+        data-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a
+        class="carousel-control-next"
+        href="#carouselExampleIndicators"
+        role="button"
+        data-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+  <!--  -->
+
+  <!--  -->
+  <div class="row py-5">
+    <div class="card-deck">
+      <div class="card border-0">
+        <a href="https://masterclass.diesmo5.com" class="">
+          <img
+            src="/img/masterclass-square-promo.png"
+            class="card-img-top"
+            alt="..."
+          />
+        </a>
+        <div class="card-body">
+          <a
+            href="https://masterclass.diesmo5.com"
+            class="text-decoration-none text-dark"
+          >
+            <h5 class="card-title">MasterClass</h5>
+            <p class="card-text">
+              Get hundreds of hours content for $12.
+            </p>
+          </a>
+          <a href="https://masterclass.diesmo5.com" class=""
+            >Start a Course ></a
+          >
+        </div>
+      </div>
+      <div class="card border-0">
+        <a href="https://masterclass.diesmo5.com" class="">
+          <img
+            src="/img/sudocore-square-promo.png"
+            class="card-img-top"
+            alt="..."
+          />
+        </a>
+        <div class="card-body">
+          <a
+            href="https://masterclass.diesmo5.com"
+            class="text-decoration-none text-dark"
+          >
+            <h5 class="card-title">Sudocore</h5>
+            <p class="card-text">
+              Build your next website faster than ever.
+            </p>
+          </a>
+          <a href="https://masterclass.diesmo5.com" class="">Get Started ></a>
+        </div>
+      </div>
+      <div class="card border-0">
+        <a href="https://masterclass.diesmo5.com" class="">
+          <img
+            src="/img/edux-square-promo.png"
+            class="card-img-top"
+            alt="..."
+          />
+        </a>
+        <div class="card-body">
+          <a
+            href="https://masterclass.diesmo5.com"
+            class="text-decoration-none text-dark"
+          >
+            <h5 class="card-title">EduFriend</h5>
+            <p class="card-text">
+              Simple way to manage your student life.
+            </p>
+          </a>
+          <a href="https://masterclass.diesmo5.com" class="">App Store ></a>
+        </div>
+      </div>
+      <div class="card border-0">
+        <a href="https://masterclass.diesmo5.com" class="">
+          <img
+            src="/img/newsletter-square-promo.png"
+            class="card-img-top"
+            alt="..."
+          />
+        </a>
+        <div class="card-body">
+          <a
+            href="https://masterclass.diesmo5.com"
+            class="text-decoration-none text-dark"
+          >
+            <h5 class="card-title">Keep up with diesmo5</h5>
+            <p class="card-text">
+              Take part in our journey.
+            </p>
+          </a>
+          <a href="https://masterclass.diesmo5.com" class=""
+            >Join the Community ></a
+          >
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--  -->
+
+  <!--  -->
+  <div class="row bg-dark p-2">
+    <a href="" class="text-decoration-none">
+      <img src="/img/youtube-promo2.png" alt="" class="w-100" />
+    </a>
+  </div>
+  <!--  -->
+
+  <!--  -->
+  <div class="row">
+    <h4 class="font-weight-bold"></h4>
+    <div class="card-deck">
+      <div class="card border-0">
+        <img
+          src="/img/hackathon-square-promo.png"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">Hackathons</h5>
+          <p class="card-text">
+            Take part in our journey.
+          </p>
+          <a href="" class="">Learn More ></a>
+        </div>
+      </div>
+      <div class="card border-0">
+        <img
+          src="/img/events-square-promo.png"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">Events</h5>
+          <p class="card-text">
+            Take part in our journey.
+          </p>
+          <a href="" class="">Learn More ></a>
+        </div>
+      </div>
+      <div class="card border-0">
+        <img src="..." class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Education</h5>
+          <p class="card-text">
+            Take part in our journey.
+          </p>
+          <a href="" class="">Learn More ></a>
+        </div>
+      </div>
+      <div class="card border-0">
+        <img
+          src="/img/youtube-square-promo.png"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">YouTube</h5>
+          <p class="card-text">
+            Take part in our journey.
+          </p>
+          <a href="" class="">Learn More ></a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--  -->
+  <!--  -->
   <div
     id="carouselExampleIndicators"
     class="carousel slide"
@@ -17,31 +248,13 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <a href="" class="text-decoration-none">
-          <img
-            src="/img/c-how-to-program-course-promo.png"
-            class="d-block w-100"
-            alt="C How To Program Course Promo"
-          />
-        </a>
+        <img src="..." class="d-block w-100" alt="..." />
       </div>
       <div class="carousel-item">
-        <a href="" class="text-decoration-none">
-          <img
-            src="/img/youtube-promo.png"
-            class="d-block w-100"
-            alt="SudoCore Web Framework Promo"
-          />
-        </a>
+        <img src="..." class="d-block w-100" alt="..." />
       </div>
       <div class="carousel-item">
-        <a href="" class="text-decoration-none">
-          <img
-            src="/img/sudocore-promo.png"
-            class="d-block w-100"
-            alt="SudoCore Web Framework Promo"
-          />
-        </a>
+        <img src="..." class="d-block w-100" alt="..." />
       </div>
     </div>
     <a
@@ -63,198 +276,6 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-</div>
-<!--  -->
-
-<!--  -->
-<div class="row py-5">
-  <div class="card-deck">
-    <div class="card border-0">
-      <a href="https://masterclass.diesmo5.com" class="">
-        <img
-          src="/img/masterclass-square-promo.png"
-          class="card-img-top"
-          alt="..."
-        />
-      </a>
-      <div class="card-body">
-        <a
-          href="https://masterclass.diesmo5.com"
-          class="text-decoration-none text-dark"
-        >
-          <h5 class="card-title">MasterClass</h5>
-          <p class="card-text">
-            Get hundreds of hours content for $12.
-          </p>
-        </a>
-        <a href="https://masterclass.diesmo5.com" class="">Start a Course ></a>
-      </div>
-    </div>
-    <div class="card border-0">
-      <a href="https://masterclass.diesmo5.com" class="">
-        <img
-          src="/img/sudocore-square-promo.png"
-          class="card-img-top"
-          alt="..."
-        />
-      </a>
-      <div class="card-body">
-        <a
-          href="https://masterclass.diesmo5.com"
-          class="text-decoration-none text-dark"
-        >
-          <h5 class="card-title">Sudocore</h5>
-          <p class="card-text">
-            Build your next website faster than ever.
-          </p>
-        </a>
-        <a href="https://masterclass.diesmo5.com" class="">Get Started ></a>
-      </div>
-    </div>
-    <div class="card border-0">
-      <a href="https://masterclass.diesmo5.com" class="">
-        <img src="/img/edux-square-promo.png" class="card-img-top" alt="..." />
-      </a>
-      <div class="card-body">
-        <a
-          href="https://masterclass.diesmo5.com"
-          class="text-decoration-none text-dark"
-        >
-          <h5 class="card-title">EduFriend</h5>
-          <p class="card-text">
-            Simple way to manage your student life.
-          </p>
-        </a>
-        <a href="https://masterclass.diesmo5.com" class="">App Store ></a>
-      </div>
-    </div>
-    <div class="card border-0">
-      <a href="https://masterclass.diesmo5.com" class="">
-        <img
-          src="/img/newsletter-square-promo.png"
-          class="card-img-top"
-          alt="..."
-        />
-      </a>
-      <div class="card-body">
-        <a
-          href="https://masterclass.diesmo5.com"
-          class="text-decoration-none text-dark"
-        >
-          <h5 class="card-title">Keep up with diesmo5</h5>
-          <p class="card-text">
-            Take part in our journey.
-          </p>
-        </a>
-        <a href="https://masterclass.diesmo5.com" class=""
-          >Join the Community ></a
-        >
-      </div>
-    </div>
-  </div>
-</div>
-<!--  -->
-
-<!--  -->
-<div class="row bg-dark p-2">
-  <a href="" class="text-decoration-none">
-    <img src="/img/youtube-promo2.png" alt="" class="w-100" />
-  </a>
-</div>
-<!--  -->
-
-<!--  -->
-<div class="row">
-  <h4 class="font-weight-bold"></h4>
-  <div class="card-deck">
-    <div class="card border-0">
-      <img
-        src="/img/hackathon-square-promo.png"
-        class="card-img-top"
-        alt="..."
-      />
-      <div class="card-body">
-        <h5 class="card-title">Hackathons</h5>
-        <p class="card-text">
-          Take part in our journey.
-        </p>
-        <a href="" class="">Learn More ></a>
-      </div>
-    </div>
-    <div class="card border-0">
-      <img src="/img/events-square-promo.png" class="card-img-top" alt="..." />
-      <div class="card-body">
-        <h5 class="card-title">Events</h5>
-        <p class="card-text">
-          Take part in our journey.
-        </p>
-        <a href="" class="">Learn More ></a>
-      </div>
-    </div>
-    <div class="card border-0">
-      <img src="..." class="card-img-top" alt="..." />
-      <div class="card-body">
-        <h5 class="card-title">Education</h5>
-        <p class="card-text">
-          Take part in our journey.
-        </p>
-        <a href="" class="">Learn More ></a>
-      </div>
-    </div>
-    <div class="card border-0">
-      <img src="/img/youtube-square-promo.png" class="card-img-top" alt="..." />
-      <div class="card-body">
-        <h5 class="card-title">YouTube</h5>
-        <p class="card-text">
-          Take part in our journey.
-        </p>
-        <a href="" class="">Learn More ></a>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!--  -->
-<!--  -->
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li
-      data-target="#carouselExampleIndicators"
-      data-slide-to="0"
-      class="active"
-    ></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="..." />
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="..." />
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="..." />
-    </div>
-  </div>
-  <a
-    class="carousel-control-prev"
-    href="#carouselExampleIndicators"
-    role="button"
-    data-slide="prev"
-  >
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a
-    class="carousel-control-next"
-    href="#carouselExampleIndicators"
-    role="button"
-    data-slide="next"
-  >
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
 <!--  -->
 {{ end }}
