--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="/">
-    <img src="/img/logo/diesmo5-logo.png" width="110px" alt="">
+    <img src="/img/logo/diesmo5-logo.png" width="110px" alt="" />
   </a>
   <button
-    class="navbar-toggler"
+    class="navbar-toggler border-0"
     type="button"
     data-toggle="collapse"
     data-target="#navbarNavAltMarkup"
@@ -15,15 +15,28 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="https://sudocore.diesmo5.com"
-        >Sudocore</a
-      >
-      <a class="nav-item nav-link" href="https://edux.diesmo5.com">EduX</a>
-      <a class="nav-item nav-link" href="https://masterclass.diesmo5.com"
-        >MasterClass</a
-      >
-      <a class="nav-item nav-link" href="/events">Events</a>
-      <a class="nav-item nav-link" href="/newsletter">Newsletter</a>
+      <a class="nav-item nav-link" href="/">Home</a>
+      <a class="nav-item nav-link" href="/masterclass" target="_blank">Masterclass</a>
+      <a class="nav-item nav-link" href="/memberships">Memberships</a>
+      <a class="nav-item nav-link" href="/store">Store</a>
+      <li class="nav-item dropdown">
+        <a
+          class="nav-link dropdown-toggle"
+          href="#"
+          id="navbarDropdownMenuLink"
+          role="button"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          Connect
+        </a>
+        <div class="dropdown-menu bg-transparent border-0" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="/community">Community</a>
+          <a class="dropdown-item" href="/collaborate">Collaborate</a>
+          <a class="dropdown-item" href="/donate">Donate</a>
+        </div>
+      </li>
     </div>
   </div>
 </nav>
